--- a/walrus.html
+++ b/walrus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <title>The Walrus: a strange and noble creature</title>
 </head>
 <body>
